fixed the overflow of the cart items on mobile devices, replaced homepage picture with compressed version so it loads faster, aligned products in the cart to the center on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body, html{
     background-color: var(--additional-color2);
 }
 
-.page-container{
+#root{
     display: flex;
     flex-direction: column;
     height: 100vh;
