--- a/src/styles/Cart.module.css
+++ b/src/styles/Cart.module.css
@@ -16,9 +16,11 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    
-    
+
+
 }
+
+
 
 .productCard{
     display: flex;
@@ -75,9 +77,6 @@
     padding: 1.2rem;
 }
 
-.cartContent{
-    height: 100%;
-}
 
 
 
@@ -119,4 +118,9 @@
     .buttons{
         align-items: center;
     }
+
+    .cartContainer li{
+    position: relative;
+    right: 1.15rem;
+}
 }
